Features:
 * Allow to pin variables in "Edit Variables" window.

Fixes:
 * Crush when editing variables.

Tweaks:
 * New application icon designed by Clément "Topy".
 * Allow to quickly change turfs dir in the tile popup.
 * Make the map reading algorithm more error-proof.

-------------------------
 v1.1.0 (2020-04-18)
-------------------------

Features:
 * Add a built-in changelog. Auto-shown when updated. Could be opened with: "Help->Changelog".
 * When creating a new map, "dmm" extension will be added automatically.
 * Replace "Show Icons" checkbox for "Environment Tree" with "Collapse All" button.
 * Add a tile popup widget for quick dir modification.

Fixes:
 * The old bug which was the reason for map corruptions.

Tweaks:
 * Remove "movable" options for turfs and areas.
 * Editor title will show the name of the currently opened environment.